--- a/directReports.html
+++ b/directReports.html
@@ -37,13 +37,13 @@
         <span class="glyphicon glyphicon-user"></span>  Create New User
     </button>
 
-    <button ng-click="viewAll()" class="btn btn-link view-page">View All</button>
-    <button ng-click="changePageSize(5)" class="btn btn-link view-page">View 5</button>
+    <button ng-click="viewAll()" ng-disabled="currentPage == 0" class="btn btn-link view-page">View All</button>
+    <button ng-click="changePageSize(5)" ng-disabled="currentPage == 0" class="btn btn-link view-page">View 5</button>
 
     <hr>
     <button ng-disabled="currentPage == 0" ng-click="previousPage()">Previous</button>
-    {{currentPage+1}}/{{numberOfPages()}}
-    <button ng-disabled="currentPage >= reports.length/pageSize - 1" ng-click="nextPage()">Next</button>
+    {{currentPage}}/{{numberOfPages()}}
+    <button ng-disabled="currentPage >= reports.length/pageSize" ng-click="nextPage()">Next</button>
 
 
     {{newUser}}
