--- a/editUser.html
+++ b/editUser.html
@@ -1,52 +1,53 @@
 <div>
     <h3 ng-hide="edit"><a ng-click="goBack()"><span class="glyphicon glyphicon-chevron-left"></span></a> Create New Employee:</h3>
     <h3 ng-show="edit"><a ng-click="goBack()"><span class="glyphicon glyphicon-chevron-left"></span></a> Edit Employee Information:</h3>
+    <hr>
 
     <form class="form-horizontal">
         <div class="form-group">
-            <label class="col-sm-2 control-label">First Name:</label>
+            <label class="col-sm-2 control-label">First Name:<span class="asterisk">*</label>
             <div class="col-sm-10">
-                <input type="text" ng-model="newUser.fName" placeholder="first name" id="fName">
+                <input type="text" ng-model="newUser.fName" placeholder="First Name" id="fName">
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label">Last Name:</label>
+            <label class="col-sm-2 control-label">Last Name:<span class="asterisk">*</label>
             <div class="col-sm-10">
-                <input type="text" ng-model="newUser.lName" placeholder="last name" id="lName">
+                <input type="text" ng-model="newUser.lName" placeholder="Last Name" id="lName">
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label">Title:</label>
+            <label class="col-sm-2 control-label">Title:<span class="asterisk">*</label>
             <div class="col-sm-10">
-                <input type="text" ng-model="newUser.title" placeholder="title" id="title">
+                <input type="text" ng-model="newUser.title" placeholder="Title" id="title">
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label">Age:</label>
+            <label class="col-sm-2 control-label">Age:<span class="asterisk">*</label>
             <div class="col-sm-10">
-                <input type="text" ng-model="newUser.age" placeholder="age" id="age">
+                <input type="text" ng-model="newUser.age" placeholder="Age" id="age">
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label">Office Phone:</label>
+            <label class="col-sm-2 control-label">Office Phone:<span class="asterisk">*</label>
             <div class="col-sm-10">
-                <input type="text" ng-model="newUser.officePhone" placeholder="officePhone" id="officePhone">
+                <input type="text" ng-model="newUser.officePhone" placeholder="XXX-XXX-XXXX" id="officePhone">
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label">Cell Phone:</label>
+            <label class="col-sm-2 control-label">Cell Phone:<span class="asterisk">*</label>
             <div class="col-sm-10">
-                <input type="text" ng-model="newUser.cellPhone" placeholder="cellPhone" id="cellPhone">
+                <input type="text" ng-model="newUser.cellPhone" placeholder="XXX-XXX-XXXX" id="cellPhone">
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label">Email:</label>
+            <label class="col-sm-2 control-label">Email:<span class="asterisk">*</label>
             <div class="col-sm-10">
-                <input type="text" ng-model="newUser.email" placeholder="email" id="email">
+                <input type="text" ng-model="newUser.email" placeholder="FirstName@fakemail.com" id="email">
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label">Sex:</label>
+            <label class="col-sm-2 control-label">Sex:<span class="asterisk">*</label>
             <div class="col-sm-10">
                 <form action="">
                     <input type="radio" value="Male" ng-model="newUser.sex" id="Male">Male<br>
