--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <div>
     <div class="container centered index-link">
-        <h1>Employee Directory</h1>
+        <h1>Employee Management System</h1>
         <a href="#/listUser">List All Employees | </a><a href="#/editUser/new">Create New User</a>
     </div>
     <div class="container" ng-view></div>
