--- a/directReports.html
+++ b/directReports.html
@@ -1,9 +1,7 @@
 <div class="container list">
     <br><br>
     <div class="row">
-        <div>
-            <lable>Search:<input ng-model="search.$"></lable><br>
-        </div>
+        <div>Search: <input type="text" ng-model="search" ng-change="filter()" placeholder="Search"/></div>
     </div>
     <hr>
 
@@ -20,7 +18,7 @@
 
     <table class="table table-striped">
         <tbody>
-        <tr ng-repeat="report in reports | filter: search | orderBy:predicate:reverse | limitTo:pageSize:pageStart" >
+        <tr ng-repeat="report in filtered = (reports | filter : search) | orderBy:predicate:reverse | limitTo:pageSize:pageStart" >
             <td>
                 <img src="{{ report.url }}" alt="Photo">
             </td>
@@ -33,19 +31,12 @@
         </tbody>
     </table>
 
-    <button class="btn btn-success" ng-click="go('/newUser')">
-        <span class="glyphicon glyphicon-user"></span>  Create New User
-    </button>
-
     <button ng-click="viewAll()" ng-disabled="currentPage == 0" class="btn btn-link view-page">View All</button>
     <button ng-click="changePageSize(5)" ng-disabled="currentPage == 0" class="btn btn-link view-page">View 5</button>
 
     <hr>
-    <button ng-disabled="currentPage == 0" ng-click="previousPage()">Previous</button>
-    {{currentPage}}/{{numberOfPages()}}
-    <button ng-disabled="currentPage >= reports.length/pageSize" ng-click="nextPage()">Next</button>
-
-
-    {{newUser}}
+    <button ng-disabled="currentPage == 1" ng-click="previousPage()">Previous</button>
+    {{currentPage}}/{{numOfPages}}
+    <button ng-disabled="currentPage >= users.length/pageSize || currentPage >= filtered.length/pageSize" ng-click="nextPage()">Next</button>
 </div>
 
