--- a/listUser.html
+++ b/listUser.html
@@ -1,9 +1,7 @@
 <div class="container list">
     <br><br>
     <div class="row">
-        <div>
-            <lable>Search:<input ng-model="search.$"></lable><br>
-        </div>
+        <div>Search: <input type="text" ng-model="search" ng-change="filter()" placeholder="Search"/></div>
     </div>
     <hr>
 
@@ -20,7 +18,7 @@
 
     <table class="table table-striped">
         <tbody>
-        <tr ng-repeat="user in users | filter: search | orderBy:predicate:reverse | limitTo:pageSize:pageStart" >
+        <tr ng-repeat="user in filtered = (users | filter : search) | orderBy:predicate:reverse | limitTo:pageSize:pageStart" >
             <td>
                 <img src="{{ user.url }}" alt="Photo">
             </td>
@@ -43,11 +41,8 @@
     <button ng-click="changePageSize(5)" class="btn btn-link view-page">View 5</button>
 
     <hr>
-    <button ng-disabled="currentPage == 0" ng-click="previousPage()">Previous</button>
-    {{currentPage}}/{{numberOfPages()}}
-    <button ng-disabled="currentPage >= users.length/pageSize" ng-click="nextPage()">Next</button>
-
-
-    {{newUser}}
+    <button ng-disabled="currentPage == 1" ng-click="previousPage()">Previous</button>
+    {{currentPage}}/{{numOfPages}}
+    <button ng-disabled="currentPage >= users.length/pageSize || currentPage >= filtered.length/pageSize" ng-click="nextPage()">Next</button>
 </div>
 
