--- a/directReports.html
+++ b/directReports.html
@@ -35,7 +35,7 @@
     <button ng-click="changePageSize(5)" ng-disabled="currentPage == 0" class="btn btn-link view-page">View 5</button>
 
     <hr>
-    <button ng-disabled="currentPage == 1" ng-click="previousPage()">Previous</button>
+    <button ng-disabled="currentPage == 1 || currentPage == 0" ng-click="previousPage()">Previous</button>
     {{currentPage}}/{{numOfPages}}
     <button ng-disabled="currentPage >= users.length/pageSize || currentPage >= filtered.length/pageSize" ng-click="nextPage()">Next</button>
 </div>
