--- a/editUser.html
+++ b/editUser.html
@@ -1,9 +1,10 @@
 <div>
-    <h3 ng-hide="edit"><a ng-click="goBack()"><span class="glyphicon glyphicon-chevron-left"></span></a> Create New Employee:</h3>
-    <h3 ng-show="edit"><a ng-click="goBack()"><span class="glyphicon glyphicon-chevron-left"></span></a> Edit Employee Information:</h3>
+    <h3 ng-hide="edit"><a ng-click="goBack()"><span class="glyphicon glyphicon-chevron-left"></span></a> Create New Employee: </h3>
+    <h3 ng-show="edit"><a ng-click="goBack()"><span class="glyphicon glyphicon-chevron-left"></span></a> Edit Employee Information: </h3>
     <hr>
 
-    <form class="form-horizontal">
+    <p class="require">require<span class="asterisk">*</span></p>
+    <form class="form-horizontal" name="form">
         <div class="form-group">
             <label class="col-sm-2 control-label">First Name:<span class="asterisk">*</label>
             <div class="col-sm-10">
@@ -26,6 +27,24 @@
             <label class="col-sm-2 control-label">Age:<span class="asterisk">*</label>
             <div class="col-sm-10">
                 <input type="text" ng-model="newUser.age" placeholder="Age" id="age">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Manager:</label>
+            <div class="col-sm-10">
+                <select ng-model="newUser.manager" id="manager"
+                        ng-options="user.fName + '&nbsp' + user.lName + '(' + user.title + ')' for user in users | filter: {id: '!' + newUser.id} track by user.id">
+                    <option value="">-- Choose Manager --</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Direct Reports:</label>
+            <div class="col-sm-10">
+                <select ng-model="newUser.directReports" id="directReports"
+                        ng-options="user.fName + '&nbsp' + user.lName + '(' + user.title + ')' for user in users | filter: {id: '!' + newUser.id} track by user.id " multiple>
+                    <option value="">-- Choose Direct Reports --</option>
+                </select>
             </div>
         </div>
         <div class="form-group">
