--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <a href="#/listUser">List All Employees | </a><a href="#/editUser/new">Create New User</a>
     </div>
     <div class="container" ng-view></div>
-    <script src= "model/main.js"></script>
-    <script src= "model/service.js"></script>
-    <script src= "controller/controller.js"></script>
+    <script src= "javascript/main.js"></script>
+    <script src= "javascript/service.js"></script>
+    <script src= "javascript/controller.js"></script>
 
 </div>
 
